2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Page XML output.

	* scribo/io/xml/internal/print_image_coords.hh,
	* scribo/io/xml/internal/print_page_preambule.hh: Fix typos.

	* scribo/io/xml/internal/time_info.hh: New.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Handle drop capital components.

	* scribo/core/tag/component.hh: New tag.

	* scribo/postprocessing/images_to_drop_capital.hh: New routine.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Save component outlines instead of bboxes.

	* scribo/io/img/internal/debug_img_visitor.hh,
	* scribo/io/img/internal/full_img_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh: Here.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Add support for tags in paragraph_info.

	* scribo/core/paragraph_info.hh: Here.

	* scribo/core/tag/paragraph.hh: Introduce paragraph tags.


2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve output cleanup for historical document toolchain.

	* scribo/filter/paragraphs_in_borders.hh,
	* scribo/filter/separators_in_borders.hh,
	* scribo/filter/separators_vert_in_borders.hh: New.

	* scribo/filter/images_in_paragraph.hh,
	* scribo/filter/paragraphs_bbox_overlap.hh,
	* scribo/filter/paragraphs_in_image.hh,
	* scribo/filter/separators_in_element.hh,
	* scribo/filter/separators_in_paragraph.hh: Improve filtering.

	* scribo/toolchain/internal/content_in_hdoc_functor.hh: Make use
	of new filters.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/util/component_precise_outline.hh: Add support for
	labeled_image.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/util/component_precise_outline.hh: Fix namespace
	ambiguity.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve XML output.

	* scribo/io/img/internal/debug_img_visitor.hh,
	* scribo/io/img/internal/full_img_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh: Save element
	outlines and do not save invalid elements.
